exports[`RadioButton with listeners matches snapshot 1`] = `
<p>
  <input
    checked={false}
    className="validate anotherClass"
    disabled={false}
    id="test"
    name="test_input"
    onBlur={[Function blurCallback]}
    onChange={[Function bound _onChange]}
    onClick={[Function bound _onChange]}
    onFocus={[Function focusCallback]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    required={true}
    type="radio"
    value="" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error="wrong"
    data-success="correct"
    htmlFor="test" />
</p>
`;

exports[`RadioButton with value matches snapshot 1`] = `
<p>
  <input
    checked={false}
    className=" with-gap"
    disabled={false}
    id="test"
    name="test_input"
    onBlur={[Function blurCallback]}
    onChange={[Function bound _onChange]}
    onClick={[Function bound _onChange]}
    onFocus={[Function focusCallback]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    required={false}
    type="radio"
    value="value" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</p>
`;

exports[`RadioButton without listeners matches snapshot 1`] = `
<p>
  <input
    checked={true}
    className=""
    disabled={false}
    id="test"
    name="test_input"
    onBlur={[Function blurCallback]}
    onChange={[Function bound _onChange]}
    onClick={[Function bound _onChange]}
    onFocus={[Function focusCallback]}
    onMouseEnter={[Function bound _onMouseEnter]}
    onMouseLeave={[Function bound _onMouseLeave]}
    placeholder=""
    required={true}
    type="radio"
    value="" />
  <label
    dangerouslySetInnerHTML={
      Object {
        "__html": "test label"
      }
    }
    data-error=""
    data-success=""
    htmlFor="test" />
</p>
`;
